fix: use Collections.singletonList for Java 8 compatibility
List.of() is Java 9+. The local JDK 17 build compiled fine (the 17
bootclasspath has it, and source/target=8 doesn't restrict the API
surface), but CI's JDK 8 matrix job failed at test-compile, and Docker
Dev Build failed the same way (Dockerfile builds on temurin-8). Switch
the test fixtures to Collections.singletonList.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>